Add unit tests for `ExpenseService` and enhance `UserServiceTest`
- Introduced `ExpenseServiceTest` to cover expense creation scenarios.
- Added verification for `UserServiceTest` methods and improved readability by updating test case names.